--- a/templates/base.html
+++ b/templates/base.html
@@ -4,21 +4,19 @@
     <title>CS 360 Internet Programming</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="/static/img/favicon.ico">
-    <link href='http://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
     <link href="/static/css/bootstrap.min.css" rel="stylesheet">
     <link href="/static/css/bootstrap-responsive.min.css" rel="stylesheet">
     <link href="/static/css/app.css" rel="stylesheet">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
   </head>
   <body>
     <div class="row-fluid">
       <div id="topbar">
 	<div class="container">
-	  <div class="course">
-	    CS 360 Internet Programming
+	  <div class="university span3">
+	    <a href="http://byu.edu">BYU</a> | <a href="http://cs.byu.edu">Computer Science</a>
 	  </div>
-	  <div class="university">
-	    BYU | Computer Science
+	  <div class="course span9">
+	    CS 360 Internet Programming
 	  </div>
 	</div>
       </div>
@@ -26,11 +24,13 @@
     <div class="container">
       <div class="row-fluid">
 	<div id="sidebar" class="span3">
+	  {% block term %}
+	  {% endblock %}
+	  {% block sidebar %}
+	  {% endblock %}
 	  <div class="brand">Daniel Zappala<br><span class="title">Associate Professor</span></div>
-	  <div class="clear"></div>
 	  <hr>
 	  <div class="personal">
-	    <p><img class="border max-width-150" src="/static/img/daniel-zappala.jpg"></p>
 	    <p>
 	      <a href="//plus.google.com/114449822521576560110?prsrc=3"
 		 rel="publisher" target="_top" style="text-decoration:none;">
@@ -41,7 +41,7 @@
 	      <a href="http://www.linkedin.com/in/danielzappala/"><img src="/static/img/linkedin.png" style="border:0;height:32px;margin-right:5px;"></a>
 	    </p>
 	    <p>daniel.zappala@gmail.com</p>
-	    <p>3361 TMCB, Brigham Young University, Provo, UT 84062</p>
+	    <p>3361 TMCB<br>Brigham Young University<br>Provo, UT 84062</p>
 	    <p>801-422-2195</p>
 	    <hr>
 	  </div>
@@ -57,6 +57,12 @@
 	</div>
       </div>
     </div>
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.0/jquery.min.js"></script>
+
+    <script src="/static/js/bootstrap.min.js"></script>
     
+
+
   </body>
 </html>
