--- a/templates/index.html
+++ b/templates/index.html
@@ -19,7 +19,7 @@
 
       <h1>Course Materials</h1>
       <ul>
-	<li>2012 Fall</li>
+	<li><a href="/fall-2012">2012 Fall</a></li>
       </ul>
     </div>
   </div>
