Added content for Fall 2013, doit script for installation, favicon and more.

--- a/static/css/app.css
+++ b/static/css/app.css
@@ -23,6 +23,10 @@ body {
     margin-bottom: 5px;
 }
 
+.course a {
+    color: black;
+}
+
 .university {
     font-size: 1.2em;
     text-align: right;
