--- a/templates/fall-2012/django/crud.html
+++ b/templates/fall-2012/django/crud.html
@@ -1,4 +1,4 @@
-{% extends "sidebar.html" %}
+{% extends "fall-2012/sidebar.html" %}
 
 {% block page %}
 
@@ -532,7 +532,7 @@ def delete(request, id):
 
       <p>Next:
 
-	<a href="/fall-2012/django/users.html">Users</a>
+	<a href="/fall-2012/django/users">Users</a>
 
       </p>
 
