--- a/templates/base.html
+++ b/templates/base.html
@@ -3,7 +3,7 @@
   <head>
     <title>CS 360 Internet Programming</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="/static/img/favicon.ico">
+    <link rel="shortcut icon" href="/static/img/favicon.png">
     <link href="/static/css/bootstrap.min.css" rel="stylesheet">
     <link href="/static/css/bootstrap-responsive.min.css" rel="stylesheet">
     <link href="/static/css/app.css" rel="stylesheet">
@@ -16,7 +16,8 @@
 	    <a href="http://byu.edu">BYU</a> | <a href="http://cs.byu.edu">Computer Science</a>
 	  </div>
 	  <div class="course span9">
-	    CS 360 Internet Programming
+	    <a href={{url_for("show",directory=None,page="index")}}>CS 360 Internet Programming
+</a>
 	  </div>
 	</div>
       </div>
