--- a/templates/fall-2012/django/index.html
+++ b/templates/fall-2012/django/index.html
@@ -1,4 +1,4 @@
-{% extends "sidebar.html" %}
+{% extends "fall-2012/sidebar.html" %}
 
 {% block page %}
 
@@ -193,7 +193,7 @@ python manage.py syncdb
 
       <p>Next:
 
-	<a href="/fall-2012/django/version1.html">Version 1</a>
+	<a href="/fall-2012/django/crud">CRUD</a>
 
       </p>
 
