--- a/templates/fall-2012/django/javascript-and-ajax.html
+++ b/templates/fall-2012/django/javascript-and-ajax.html
@@ -1,4 +1,4 @@
-{% extends "sidebar.html" %}
+{% extends "fall-2012/sidebar.html" %}
 
 {% block page %}
 
@@ -265,6 +265,10 @@ function getToday(url) {
       </ul>
 
       <p>Next:
+
+	<a href="/fall-2012/django/rest-interface">REST Interface</a>
+
+	or:
 
 	<a href="/fall-2012/django/mongodb">MongoDB</a>
 
