--- a/templates/fall-2012/django/templates-and-css.html
+++ b/templates/fall-2012/django/templates-and-css.html
@@ -1,4 +1,4 @@
-{% extends "sidebar.html" %}
+{% extends "fall-2012/sidebar.html" %}
 
 {% block page %}
 
@@ -362,7 +362,7 @@ urlpatterns += patterns('',
 
       <p>Next:
 
-	<a href="/fall-2012/django/session-state.html">Session State</a>
+	<a href="/fall-2012/django/session-state">Session State</a>
 
       </p>
 
