--- a/templates/fall-2012/django/users.html
+++ b/templates/fall-2012/django/users.html
@@ -1,4 +1,4 @@
-{% extends "sidebar.html" %}
+{% extends "fall-2012/sidebar.html" %}
 
 {% block page %}
 
@@ -418,7 +418,7 @@ def item(request, id):
 
       <p>Next:
 
-	<a href="/fall-2012/django/templates-and-css.html">Templates and CSS</a>
+	<a href="/fall-2012/django/templates-and-css">Templates and CSS</a>
 
       </p>
 
