--- a/templates/fall-2012/labs/messaging-service-grading.html
+++ b/templates/fall-2012/labs/messaging-service-grading.html
@@ -1,4 +1,4 @@
-{% extends "sidebar.html" %}
+{% extends "fall-2012/sidebar.html" %}
 
 {% macro item(text,score,criteria) -%}
 <div class="box"></div>
