--- a/templates/fall-2013/index.html
+++ b/templates/fall-2013/index.html
@@ -161,7 +161,9 @@
 	answer a question scores a 0.<p>
 
       <p>Your final grade will be computed by weighting all scores as
-	follows:</p><table>
+	follows:</p>
+
+      <table>
 	<col class="course">
 	<tr><td>Labs</td><td>70%</td></tr>
 	<tr><td>Exams</td><td>30%</td></tr>
