Added a reading, fixed some links.

--- a/templates/index.html
+++ b/templates/index.html
@@ -19,8 +19,8 @@
 
       <h1>Course Materials</h1>
       <ul>
-	<li><a href="/fall-2013">2013 Fall</a></li>
-	<li><a href="/fall-2012">2012 Fall</a></li>
+	<li><a href={{url_for("show",directory="fall-2013")}}>2013 Fall</a></li>
+	<li><a href={{url_for("show",directory="fall-2012")}}>2012 Fall</a></li>
       </ul>
     </div>
   </div>
