--- a/templates/fall-2013/sidebar.html
+++ b/templates/fall-2013/sidebar.html
@@ -11,6 +11,7 @@ Fall 2013
 <ul class="menu">
   <li><a href={{url_for("show",directory="fall-2013",page="")}}>Syllabus</a></li>
   <li><a href={{url_for("show",directory="fall-2013",page="schedule")}} >Schedule</a></li>
+  <li><a href={{url_for("show",directory="fall-2013",page="officehours")}} >Office Hours</a></li>
   <li>
     <div class="btn-group">
       <a class="btn dropdown-toggle" data-toggle="dropdown" href="#">
