Put code on GitHub.

--- a/templates/fall-2013/code.html
+++ b/templates/fall-2013/code.html
@@ -9,14 +9,11 @@
 
       <h2>Socket Programming</h2>
 
-      <p>Code to demonstrate DNS name resolution and simple
-	client-server networking.</p>
+      <p>Code to demonstrate simple client-server networking in C++,
+	using an echo client and server:</p>
 
-      <ul>
-	<li>
-	  <a href="/static/code/sockets.tgz">Sockets</a>
-	</li>
-      </ul>
+      <a href="https://github.com/zappala/socket-programming-examples-c">
+	Socket programming examples in C++</a>
 
       <h2>HTTP</h2>
 
