Updated code examples.

--- a/templates/fall-2013/code.html
+++ b/templates/fall-2013/code.html
@@ -15,6 +15,15 @@
       <a href="https://github.com/zappala/socket-programming-examples-c">
 	Socket programming examples in C++</a>
 
+      <h2>Thread Programming</h2>
+
+      <p>C++ code that shows how to create threads using the pthreads
+	library and how to synchronize threads using semaphores and
+	mutexes.</p>
+
+      <a href="https://github.com/zappala/pthreads-examples-c">pthreads
+      examples in C/C++</a>
+
       <h2>HTTP</h2>
 
       <p>Code to help parse HTTP.</p>
@@ -22,21 +31,6 @@
       <ul>
 	<li>
 	  <a href="/static/code/http.tgz">HTTP and URL Parser</a>
-	</li>
-      </ul>
-
-      <h2>Thread Programming</h2>
-
-      <p>Code that shows how to create threads using the pthreads
-	library and how to do synchronize threads using mutexes and
-	semaphores.</p>
-
-      <ul>
-	<li>
-	  <a href="/static/code/threads.tgz">Thread Test</a>
-	</li>
-	<li>
-	  <a href="/static/code/thread-sync.tgz">Thread Synchronization</a>
 	</li>
       </ul>
 
