--- a/templates/fall-2013/sidebar.html
+++ b/templates/fall-2013/sidebar.html
@@ -20,6 +20,7 @@ Fall 2013
       </a>
       <ul class="dropdown-menu">
 	<li><a href={{url_for("show",directory="fall-2013/labs",page="messaging-service")}}>Messaging Service</a></li>
+	<li><a href={{url_for("show",directory="fall-2013/labs",page="threaded-messaging-service")}}>Threaded Messaging Service</a></li>
       </ul>
     </div>
   </li>
