Updated office hours for CS 360.

--- a/templates/fall-2013/officehours.html
+++ b/templates/fall-2013/officehours.html
@@ -78,10 +78,10 @@
 	  12 - 1:30
 	</div>
 	<div class="span3 hours">
-	  Ike
+	  Nozomu
 	</div>
 	<div class="span5 hours">
-	  1058 TMCB, cubicle 17
+	  2212 TMCB
 	</div>
       </div>
 
@@ -164,10 +164,10 @@
 	  12 - 1:30
 	</div>
 	<div class="span3 hours">
-	  Ike
+	  Nozomu
 	</div>
 	<div class="span5 hours">
-	  1058 TMCB, cubicle 17
+	  2212 TMCB
 	</div>
       </div>
 
