--- a/static/css/app.css
+++ b/static/css/app.css
@@ -38,6 +38,10 @@ body {
 
 /* Menu */
 
+#term {
+    display: none;
+}
+
 #sidebar {
     margin-top: 3px;
     text-align: right;
@@ -429,4 +433,30 @@ pre {
 }
 
 .label-success {
+}
+
+/* Printing */
+@media print {    
+    .no-print, .no-print *
+    {
+        display: none !important;
+    }
+    a[href]:after {
+	content: none;
+    }
+    #term {
+	display: inline;
+	font-size: 1.5em;
+	margin: 0px;
+    }
+
+    .term {
+	padding: 0px;
+    }
+
+    #topbar {
+	background-color: #abc8e4;
+	background-color: #d1e4f6;
+	margin: 0px 0px 0px 0px;
+    }
 }
