--- a/templates/fall-2013/officehours.html
+++ b/templates/fall-2013/officehours.html
@@ -15,23 +15,8 @@
       <!-- Monday -->
 
       <div class="row-fluid office">
-
 	<div class="span2 day">Monday</div>
-
 	<div class="span2 hours">
-	  9 - 11
-	</div>
-	<div class="span3 hours">
-	  Ike
-	</div>
-	<div class="span5 hours">
-	  1058 TMCB, cubicle 17
-	</div>
-      </div>
-
-      <div class="row-fluid office">
-
-	<div class="offset2 span2 hours">
 	  12 - 2
 	</div>
 	<div class="span3 hours">
@@ -43,7 +28,6 @@
       </div>
 
       <div class="row-fluid office">
-
 	<div class="offset2 span2 hours">
 	  2 - 3
 	</div>
@@ -56,7 +40,6 @@
       </div>
 
       <div class="row-fluid office">
-
 	<div class="offset2 span2 hours">
 	  4 - 5
 	</div>
@@ -71,9 +54,7 @@
       <!--- Tuesday -->
 
       <div class="row-fluid office">
-
 	<div class="span2 day">Tuesday</div>
-
 	<div class="span2 hours">
 	  12 - 1:30
 	</div>
@@ -86,7 +67,18 @@
       </div>
 
       <div class="row-fluid office">
+	<div class="offset2 span2 hours">
+	  1:30 - 4:30
+	</div>
+	<div class="span3 hours">
+	  Javid
+	</div>
+	<div class="span5 hours">
+	  1058 TMCB, cubicle 17
+	</div>
+      </div>
 
+      <div class="row-fluid office">
 	<div class="offset2 span2 hours">
 	  4:30 - 7:30
 	</div>
@@ -101,23 +93,8 @@
       <!-- Wednesday -->
 
       <div class="row-fluid office">
-
 	<div class="span2 day">Wednesday</div>
-
 	<div class="span2 hours">
-	  9 - 11
-	</div>
-	<div class="span3 hours">
-	  Ike
-	</div>
-	<div class="span5 hours">
-	  1058 TMCB, cubicle 17
-	</div>
-      </div>
-
-      <div class="row-fluid office">
-
-	<div class="offset2 span2 hours">
 	  12 - 2
 	</div>
 	<div class="span3 hours">
@@ -129,7 +106,6 @@
       </div>
 
       <div class="row-fluid office">
-
 	<div class="offset2 span2 hours">
 	  2 - 3
 	</div>
@@ -141,25 +117,10 @@
 	</div>
       </div>
 
-      <div class="row-fluid office">
-
-	<div class="offset2 span2 hours">
-	  4 - 6
-	</div>
-	<div class="span3 hours">
-	  Ike
-	</div>
-	<div class="span5 hours">
-	  1058 TMCB, cubicle 17
-	</div>
-      </div>
-
       <!--- Thursday -->
 
       <div class="row-fluid office">
-
 	<div class="span2 day">Thursday</div>
-
 	<div class="span2 hours">
 	  12 - 1:30
 	</div>
@@ -172,7 +133,18 @@
       </div>
 
       <div class="row-fluid office">
+	<div class="offset2 span2 hours">
+	  1:30 - 4:30
+	</div>
+	<div class="span3 hours">
+	  Javid
+	</div>
+	<div class="span5 hours">
+	  1058 TMCB, cubicle 17
+	</div>
+      </div>
 
+      <div class="row-fluid office">
 	<div class="offset2 span2 hours">
 	  4:30 - 7:30
 	</div>
@@ -187,23 +159,8 @@
       <!-- Friday -->
 
       <div class="row-fluid office">
-
 	<div class="span2 day">Friday</div>
-
 	<div class="span2 hours">
-	  9 - 11
-	</div>
-	<div class="span3 hours">
-	  Ike
-	</div>
-	<div class="span5 hours">
-	  1058 TMCB, cubicle 17
-	</div>
-      </div>
-
-      <div class="row-fluid office">
-
-	<div class="offset2 span2 hours">
 	  12 - 2
 	</div>
 	<div class="span3 hours">
@@ -215,7 +172,6 @@
       </div>
 
       <div class="row-fluid office">
-
 	<div class="offset2 span2 hours">
 	  2 - 3
 	</div>
@@ -228,7 +184,6 @@
       </div>
 
       <div class="row-fluid office">
-
 	<div class="offset2 span2 hours">
 	  4 - 5
 	</div>
@@ -241,21 +196,6 @@
       </div>
 
       <!-- Saturday -->
-
-      <div class="row-fluid office">
-
-	<div class="span2 day">Saturday</div>
-
-	<div class="span2 hours">
-	  10 - 12
-	</div>
-	<div class="span3 hours">
-	  Ike
-	</div>
-	<div class="span5 hours">
-	  1058 TMCB, cubicle 17
-	</div>
-      </div>
 
     </div>
   </div>
