Added download accelerator lab and supporting code.

--- a/templates/fall-2013/code.html
+++ b/templates/fall-2013/code.html
@@ -12,8 +12,8 @@
       <p>Code to demonstrate simple client-server networking in C++,
 	using an echo client and server:</p>
 
-      <a href="https://github.com/zappala/socket-programming-examples-c">
-	Socket programming examples in C++</a>
+      <p><a href="https://github.com/zappala/socket-programming-examples-c">
+	Socket programming examples in C++</a></p>
 
       <h2>Thread Programming</h2>
 
@@ -21,46 +21,15 @@
 	library and how to synchronize threads using semaphores and
 	mutexes.</p>
 
-      <a href="https://github.com/zappala/pthreads-examples-c">pthreads
-      examples in C/C++</a>
+      <p><a href="https://github.com/zappala/pthreads-examples-c">pthreads
+      examples in C/C++</a></p>
 
-      <h2>HTTP</h2>
+      <h2>Python Networking and Threading</h2>
 
-      <p>Code to help parse HTTP.</p>
+      <P>Python code that shows how to use Python Requests, a client-side
+	HTTP library, threading, and low-level socket programming.</p>
 
-      <ul>
-	<li>
-	  <a href="/static/code/http.tgz">HTTP and URL Parser</a>
-	</li>
-      </ul>
-
-      <h2>Server Architecture</h2>
-
-      <p>Code that demonstrates different server architectures --
-	single thread, a thread per client, multiplexing with poll(),
-	and multiplexing with epoll().</p>
-
-      <ul>
-	<li>
-	  <a href="/static/code/server.tgz">Server</a>
-	</li>
-      </ul>
-
-      <h2>Web Server</h2>
-
-      <p>Code to help create a web server.</p>
-
-      <ul>
-	<li>
-	  <a href="/static/code/http.tgz">HTTP and URL Parser</a>
-	</li>
-	<li>
-	  <a href="/static/code/config.tgz">Configuration File Parsing</a>
-	</li>
-	<li>
-	  <a href="/static/code/exec.tgz">Executing External Programs</a>
-	</li>
-      </ul>
+      <p><a href="https://github.com/zappala/python-networking-and-threading">Python Networking and Threading</a></p>
 
       <h2>Python Plotting Examples</h2>
 
@@ -85,24 +54,6 @@ export PYTHONPATH=.:/users/faculty/zappala/lib64/python2.7:/users/faculty/zappal
       <p>Once you log out and then log back in, the plotting script
 	should work.</p>
 
-      <h2>Python Threading and Networking</h2>
-
-      <p>Code demonstrating how to use Python for threading,
-	synchronization, and networking.</p>
-
-      <ul>
-	<li>
-	  <a href="/static/code/python-threading.tgz">Threading</a>
-	</li>
-	<li>
-	  <a href="/static/code/python-network.tgz">Network</a>
-	</li>
-	<li>
-	  <a href="/static/code/echo-broadcast.py">UDP Broadcast</a>
-	</li>
-
-      </ul>
-      
     </div>
   </div>
 </div>
