--- a/templates/fall-2013/sidebar.html
+++ b/templates/fall-2013/sidebar.html
@@ -21,6 +21,7 @@ Fall 2013
       <ul class="dropdown-menu">
 	<li><a href={{url_for("show",directory="fall-2013/labs",page="messaging-service")}}>Messaging Service</a></li>
 	<li><a href={{url_for("show",directory="fall-2013/labs",page="threaded-messaging-service")}}>Threaded Messaging Service</a></li>
+	<li><a href={{url_for("show",directory="fall-2013/labs",page="download-accelerator")}}>Download Accelerator</a></li>
       </ul>
     </div>
   </li>
