Fixed typo in assignment.

--- a/templates/fall-2013/labs/web-server.html
+++ b/templates/fall-2013/labs/web-server.html
@@ -198,7 +198,7 @@ parameter timeout 1
 
       <p>You should check for errors for all system calls and exit
 	gracefully if an error occurs, printing out an appropriate error
-	message with <i>perror()</i>.</p>
+	message.</p>
 
       <h2>Testing</h2>
 
