Clarified web server assignment for Fall 2013.

--- a/templates/fall-2013/labs/web-server.html
+++ b/templates/fall-2013/labs/web-server.html
@@ -238,7 +238,13 @@ python stress-test.py localhost:8000/static/files/largefile.txt -t 10 -d 10
       <ol>
 
 	<li>Create a tgz of your program directory. Be sure to include
-	  a PDF of your report. For example, if your code is in the
+	  a PDF of your report. Also include a web.conf that uses
+	  default for a hostname, all of the testing files from
+	  GitHub, and the test scripts from GitHub. This will allow
+	  the TA to test your code immediately, rather than having to
+	  download or configure anything.
+
+	  For example, if your code is in the
 	  directory called web-server, then you would type this:
 
 <pre>
