--- a/templates/fall-2013/labs/web-server.html
+++ b/templates/fall-2013/labs/web-server.html
@@ -111,8 +111,7 @@
 	<li>200 OK</li>
 
 	<li>400 Bad Request : if the web server parses the request and the
-	  method or URI is empty, or if the request contains a host that this
-	  server doesn't handle</li>
+	  method or URI is empty</li>
 
 	<li>403 Forbidden: if the web server does not have permission to open
 	  the requested file</li>
