--- a/templates/base.html
+++ b/templates/base.html
@@ -63,7 +63,7 @@
 	  </div>
 	</div>
 	<div class="span9">
-	  <div id="page">
+	  <div id="page" class="text">
 	    {% block page %}{% endblock %}
 	  </div>
 	</div>
