--- a/templates/fall-2013/sidebar.html
+++ b/templates/fall-2013/sidebar.html
@@ -24,6 +24,7 @@ Fall 2013
 	<li><a href={{url_for("show",directory="fall-2013/labs",page="download-accelerator")}}>Download Accelerator</a></li>
 	<li><a href={{url_for("show",directory="fall-2013/labs",page="web-server")}}>Web Server</a></li>
 	<li><a href={{url_for("show",directory="fall-2013/labs",page="queueing-theory")}}>Queueing Theory</a></li>
+	<li><a href={{url_for("show",directory="fall-2013/labs",page="web-application")}}>Web Application</a></li>
       </ul>
     </div>
   </li>
