Added clarification to Web Server lab for Fall 2013.

--- a/templates/fall-2013/labs/web-server.html
+++ b/templates/fall-2013/labs/web-server.html
@@ -127,6 +127,10 @@
 
       </ul>
 
+      <p>All responses should include an entity body (the file being
+      sent), even errors. The entity body in an error response allows
+      the browser to display an error to the user.</p>
+
       <h3>Extra Credit</h3>
 
       <p>For extra credit, you can make your web server work with the
