First draft of Winter 2014 syllabus, schedule, etc.

--- a/templates/base.html
+++ b/templates/base.html
@@ -52,7 +52,8 @@
 	      <a href="https://twitter.com/Daniel_Zappala"><img src="/static/img/twitter.png" style="border:0;width:32px;height:32px;margin-right:5px;"></a>
 	      <a href="http://www.linkedin.com/in/danielzappala/"><img src="/static/img/linkedin.png" style="border:0;height:32px;margin-right:5px;"></a>
 	    </p>
-	    <p>daniel.zappala@gmail.com</p>
+	    <p><a href="http://zappala.byu.edu">zappala.byu.edu</a><br>
+	    daniel.zappala@gmail.com</p>
 	    <p>3361 TMCB<br>Brigham Young University<br>Provo, UT 84062</p>
 	    <p>801-422-2195</p>
 	    <hr>
