--- a/templates/fall-2013/labs/web-application.html
+++ b/templates/fall-2013/labs/web-application.html
@@ -119,6 +119,10 @@ this diagram, such as [lucidchart](http://www.lucidchart.com) or
 databse, show your JSON document structure and explain what it
 contains.
 
+* **Contributions**: Describe in detail the contributions made by each
+member of the project. Each member is responsible for contributing a
+few paragraphs in this section.
+
 * **Future Work**: Describe a roadmap for future development, with
 additional features you could add or changes to the interface.
 
