Added lectures for Winter 2014, a few labs.

--- a/templates/fall-2013/labs/threaded-messaging-service.html
+++ b/templates/fall-2013/labs/threaded-messaging-service.html
@@ -13,10 +13,9 @@
 	thread synchronization, and (4) to gain practice with client software
 	that can issue multiple requests over a socket.</p>
 
-      <p>In this assignment, you will convert your singly-threaded messaging
-	server from
-
-	<a href="/fall-2013/lab1.html">Lab 1</a>
+      <p>In this assignment, you will convert your 
+	<a href="/fall-2013/messaging-service.html">singly-threaded
+	messaging server</a>
 
 	into a multithreaded server.</p>
 
