--- a/templates/winter-2014/labs/messaging-service.html
+++ b/templates/winter-2014/labs/messaging-service.html
@@ -23,7 +23,7 @@ The messaging protocol defines the communication between the client
 and the server.  Message fields are separated by whitespace and lines
 are ended by the newline character (\n).
 
-### Storing Messages<
+### Storing Messages
 
 <pre>
 <b>Message</b>
