--- a/templates/winter-2014/sidebar.html
+++ b/templates/winter-2014/sidebar.html
@@ -20,6 +20,7 @@ Winter 2014
       </a>
       <ul class="dropdown-menu">
 	<li><a href={{url_for("show",directory="winter-2014/labs",page="messaging-service")}}>Messaging Service</a></li>
+	<li><a href={{url_for("show",directory="winter-2014/labs",page="threaded-messaging-service")}}>Threaded Messaging Service</a></li>
       </ul>
     </div>
   </li>
