Added office hours for 2014.

--- a/templates/winter-2014/officehours.html
+++ b/templates/winter-2014/officehours.html
@@ -14,13 +14,52 @@
 <div class="row-fluid office">
   <div class="span2 day">Monday</div>
   <div class="span2 hours">
-    4 - 5
+    12 - 2pm
+  </div>
+  <div class="span3 hours">
+    Nozomu
+  </div>
+  <div class="span5 hours">
+    2212 TMCB
+  </div>
+</div>
+
+<div class="row-fluid">
+  <div class="offset2 span2 hours">
+    3 - 5pm
   </div>
   <div class="span3 hours">
     Prof. Zappala
   </div>
   <div class="span5 hours">
     2228 TMCB
+  </div>
+</div>
+
+<div class="row-fluid">
+  <div class="offset2 span2 hours">
+    4 - 5pm
+  </div>
+  <div class="span3 hours">
+    Prof. Zappala
+  </div>
+  <div class="span5 hours">
+    2228 TMCB
+  </div>
+</div>
+
+<!--- Tuesday -->
+
+<div class="row-fluid office">
+  <div class="span2 day">Tuesday</div>
+  <div class="span2 hours">
+    1 - 6pm
+  </div>
+  <div class="span3 hours">
+    James
+  </div>
+  <div class="span5 hours">
+    1058 TMCB, cubicle 17
   </div>
 </div>
 
@@ -29,6 +68,18 @@
 <div class="row-fluid office">
   <div class="span2 day">Wednesday</div>
   <div class="span2 hours">
+    12 - 2pm
+  </div>
+  <div class="span3 hours">
+    Nozomu
+  </div>
+  <div class="span5 hours">
+    2212 TMCB
+  </div>
+</div>
+
+<div class="row-fluid">
+  <div class="offset2 span2 hours">
     4 - 5
   </div>
   <div class="span3 hours">
@@ -39,11 +90,38 @@
   </div>
 </div>
 
+<!--- Thursday -->
+
+<div class="row-fluid office">
+  <div class="span2 day">Thursday</div>
+  <div class="span2 hours">
+    1 - 6pm
+  </div>
+  <div class="span3 hours">
+    James
+  </div>
+  <div class="span5 hours">
+    1058 TMCB, cubicle 17
+  </div>
+</div>
+
 <!-- Friday -->
 
 <div class="row-fluid office">
   <div class="span2 day">Friday</div>
   <div class="span2 hours">
+    12 - 2pm
+  </div>
+  <div class="span3 hours">
+    Nozomu
+  </div>
+  <div class="span5 hours">
+    2212 TMCB
+  </div>
+</div>
+
+<div class="row-fluid">
+  <div class="offset2 span2 hours">
     4 - 5
   </div>
   <div class="span3 hours">
@@ -55,5 +133,18 @@
 </div>
 
 <!-- Saturday -->
+
+<div class="row-fluid office">
+  <div class="span2 day">Saturday</div>
+  <div class="span2 hours">
+    9am - 12pm
+  </div>
+  <div class="span3 hours">
+    Nozomu
+  </div>
+  <div class="span5 hours">
+    2212 TMCB
+  </div>
+</div>
 
 {% endblock %}
