Updated office hours.

--- a/templates/winter-2014/officehours.html
+++ b/templates/winter-2014/officehours.html
@@ -29,10 +29,10 @@
     3 - 5pm
   </div>
   <div class="span3 hours">
-    Prof. Zappala
+    Nozomu
   </div>
   <div class="span5 hours">
-    2228 TMCB
+    2212 TMCB
   </div>
 </div>
 
