--- a/templates/winter-2014/officehours.html
+++ b/templates/winter-2014/officehours.html
@@ -26,7 +26,7 @@
 
 <div class="row-fluid">
   <div class="offset2 span2 hours">
-    3 - 5pm
+    4 - 6pm
   </div>
   <div class="span3 hours">
     Nozomu
@@ -80,6 +80,18 @@
 
 <div class="row-fluid">
   <div class="offset2 span2 hours">
+    4 - 6pm
+  </div>
+  <div class="span3 hours">
+    Nozomu
+  </div>
+  <div class="span5 hours">
+    2212 TMCB
+  </div>
+</div>
+
+<div class="row-fluid">
+  <div class="offset2 span2 hours">
     4 - 5
   </div>
   <div class="span3 hours">
@@ -111,6 +123,18 @@
   <div class="span2 day">Friday</div>
   <div class="span2 hours">
     12 - 2pm
+  </div>
+  <div class="span3 hours">
+    Nozomu
+  </div>
+  <div class="span5 hours">
+    2212 TMCB
+  </div>
+</div>
+
+<div class="row-fluid">
+  <div class="offset2 span2 hours">
+    4 - 6pm
   </div>
   <div class="span3 hours">
     Nozomu
