--- a/templates/winter-2014/labs/download-accelerator.html
+++ b/templates/winter-2014/labs/download-accelerator.html
@@ -51,9 +51,9 @@ Use the	[experiments.py](https://github.com/zappala/python-networking-and-thread
 script to run a set of experiments using your downloader on large
 files of sizes that are approximately 1 MB, 10 MB, and 100 MB. This
 script will vary the number of threads from 1 to 10 and repeat each
-experiment 10 times. Run the experiments both while on campus and
-while off campus.  If the 100MB file takes too long while off campus,
-you can skipt that part of the experiment.
+experiment 10 times. Run the experiments while on campus and connected
+to a wired or wireless network. Be sure to report what kind of connection
+you use while running the experiment.
 
 With the data you collect, use the
 [plot.py](https://github.com/zappala/python-networking-and-threading/blob/master/download-accelerator/plot.py)
@@ -123,7 +123,7 @@ Submit your report and the tgz file using [learningsuite.byu.edu](http://learnin
 ## Grading
 
 Your lab will be tested as specified in the
-[grading sheet]({{url_for("show",directory="fall-2013/labs",page="download-accelerator-grading")}}).
+[grading sheet]({{url_for("show",directory="winter-2014/labs",page="download-accelerator-grading")}}).
 If you wish to receive help with your code, then you should print out
 clear and concise debugging information when the debugging flag (-d)
 is given on the command line. The more helpful and clear your
