--- a/templates/winter-2014/sidebar.html
+++ b/templates/winter-2014/sidebar.html
@@ -22,6 +22,7 @@ Winter 2014
 	<li><a href={{url_for("show",directory="winter-2014/labs",page="messaging-service")}}>Messaging Service</a></li>
 	<li><a href={{url_for("show",directory="winter-2014/labs",page="threaded-messaging-service")}}>Threaded Messaging Service</a></li>
 	<li><a href={{url_for("show",directory="winter-2014/labs",page="download-accelerator")}}>Download Accelerator</a></li>
+	<li><a href={{url_for("show",directory="winter-2014/labs",page="web-server")}}>Web Server</a></li>
       </ul>
     </div>
   </li>
