--- a/templates/winter-2014/labs/download-accelerator.html
+++ b/templates/winter-2014/labs/download-accelerator.html
@@ -55,6 +55,11 @@ experiment 10 times. Run the experiments while on campus and connected
 to a wired or wireless network. Be sure to report what kind of connection
 you use while running the experiment.
 
+**Before running the experiments, be sure your code is working. Only
+run the script once or twice to collect experimental data. These files
+are hosted on DropBox and the account is rate-limited. If too many people
+download them at once, then the downloads will stop working.**
+
 With the data you collect, use the
 [plot.py](https://github.com/zappala/python-networking-and-threading/blob/master/download-accelerator/plot.py)
 script to graph the results. This script will create a series of box
