--- a/templates/winter-2014/sidebar.html
+++ b/templates/winter-2014/sidebar.html
@@ -24,6 +24,7 @@ Winter 2014
 	<li><a href={{url_for("show",directory="winter-2014/labs",page="download-accelerator")}}>Download Accelerator</a></li>
 	<li><a href={{url_for("show",directory="winter-2014/labs",page="web-server")}}>Web Server</a></li>
 	<li><a href={{url_for("show",directory="winter-2014/labs",page="queueing-theory")}}>Queueing Theory</a></li>
+	<li><a href={{url_for("show",directory="winter-2014/labs",page="web-application")}}>Web Application</a></li>
       </ul>
     </div>
   </li>
