Fixed broken links

--- a/templates/winter-2014/labs/threaded-messaging-service-grading.html
+++ b/templates/winter-2014/labs/threaded-messaging-service-grading.html
@@ -10,7 +10,7 @@
 
 {% block page %}
 
-{% fitler markdown %}
+{% filter markdown %}
 
 # Threaded Messaging Service Grading Sheet
 
@@ -52,6 +52,6 @@ complete and then turn the sheet in to the professor.*
 <div class="border">TA Name:</div>
 <div class="border">Score:</div>
 
+{% endfilter %}
+
 {% endblock %}
-
-
