--- a/templates/winter-2014/labs/threaded-messaging-service.html
+++ b/templates/winter-2014/labs/threaded-messaging-service.html
@@ -61,7 +61,7 @@ verify that you have used memory synchronization.
 
 ## Grading
 
-Your lab will be tested as specified in the [grading sheet]({{url_for("show",directory="fall-2013/labs",page="threaded-messaging-service-grading")}})
+Your lab will be tested as specified in the [grading sheet]({{url_for("show",directory="winter-2014/labs",page="threaded-messaging-service-grading")}})
 
 As a part of testing, we will use the [load testing
 script](https://github.com/zappala/messaging-service-python) posted at
