--- a/templates/winter-2014/labs/web-server.html
+++ b/templates/winter-2014/labs/web-server.html
@@ -229,7 +229,7 @@ Submit your report and the tgz file using [learningsuite.byu.edu](http://learnin
 ## Grading
 
 Your web server will be tested as specified in the [grading
-sheet]({{url_for("show",directory="fall-2013/labs",page="web-server-grading")}}).
+sheet]({{url_for("show",directory="winter-2014/labs",page="web-server-grading")}}).
 
 If you wish to receive help with your code, then you should print out
 clear and concise debugging information when the debugging flag is
